--- a/index.css
+++ b/index.css
@@ -3,3 +3,10 @@ h1 {
     background-color: blue;
     color: white;
 }
+img {
+    width: 500px;
+    height: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
